--- a/templates/admin/styles/table.css
+++ b/templates/admin/styles/table.css
@@ -81,8 +81,6 @@
 .table_admin tfoot .column_move, .table_admin thead .column_move
 {
 	background: url('templates/admin/images/sprite.png') -116px 2px;
-	display: block;
-	width: 20px;
 }
 
 /* link groups */
@@ -128,6 +126,7 @@
 {
 	text-indent: -999em;
 	text-align: left;
+	width: 20px;
 }
 
 /* admin table move control */
